-Playing with index.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,1 +1,30 @@
-Hello world
+<html>
+  <head>
+    <title>My title</title>
+  </head>
+  <body>
+    <header>
+      <h1>This is a header!</h1>
+      <h3>subtitle for my header</h3>
+    </header>
+    <main class="">
+    </main>
+      <table border="1px">
+        <thead>
+          <tr>
+            <th width=200>Type</th>
+            <th>Ingredients</th>
+            <th>Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Pan pizza</td>
+            <td>Olives</td>
+            <td>$70</td>
+          </tr>
+        </tbody>
+      </table>
+    <footer>This is a footer!</footer>
+  </body>
+</html>
