--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,30 +1,81 @@
-<html>
+<!DOCTYPE html>
+<!--suppress HtmlFormInputWithoutLabel -->
+<html lang="en-US">
   <head>
     <title>My title</title>
+    <meta name="description" content="really cool stuff in this webpage here">
+    <meta name="author" content="Sheryaar">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0  ">
+
+    <link rel="stylesheet" href="../static/css/master.css">
+    <script
+            src="https://code.jquery.com/jquery-3.5.1.js"
+            integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+            crossorigin="anonymous"></script>
+    <script src="../static/js/main.js"></script>
+<!--    <script src="/webjars/jquery/3.5.1/jquery.js"></script>-->
+
   </head>
   <body>
+  <section id="context">
+    <ul>
+      <li><a href="#">Forward</a></li>
+      <li><a href="#">Back</a></li>
+      <li><a href="#">Around</a></li>
+      <li><a href="#">Something</a></li>
+      <li><a href="#" class="hidden img">Save image as...</a></li>
+      <li><a href="#">Ok then</a></li>
+    </ul>
+  </section>
     <header>
-      <h1>This is a header!</h1>
-      <h3>subtitle for my header</h3>
+      <section class="footer-header-content">
+        <h1>This is a header!</h1>
+        <h3>subtitle for my header</h3>
+        <textarea placeholder="text here" id="text"></textarea>
+      </section>
     </header>
-    <main class="">
+    <main>
+      <section>
+        <h2>About Me</h2>
+        <button id="button1">Prepend</button>
+        <button id="button2">Append</button>
+        <button id="button3">Replace</button>
+        <p>I love taking long walks on the beach</p>
+      </section>
+      <section>
+        <article>
+          <div class="image" style="background:url(../static/images/clown.jpg)"></div>
+          <br>
+          <h4>Looking good m8</h4>
+          <div>Talking about some stuff check it out look at this clown...</div>
+          <a href="#">Read more...</a>
+        </article>
+        <article>
+          <div class="image" style="background:url(../static/images/hona.jpg)"></div>
+          <br>
+          <h4>Thats my girl</h4>
+          <div>Talking about some stuff check it out look at this hona...</div>
+          <a href="#">Read more...</a>
+        </article>
+        <article>
+          <div class="image" style="background:url(../static/images/maxresdefault.jpg)"></div>
+          <br>
+          <h4>Looking good m8</h4>
+          <div>Talking about some stuff check it out look at this other thing...</div>
+          <a href="#">Read more...</a>
+        </article>
+      </section>
+      <section>
+        <p id="target">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan, tellus quis posuere consectetur, nisl nunc ultricies massa, at pulvinar sapien sem eget erat. Ut cursus eros id lorem pretium, nec rhoncus odio varius. Phasellus non dignissim libero. Curabitur eu sodales tortor. Proin viverra dictum neque hendrerit rutrum. Quisque varius consectetur ligula, eu tempor elit aliquet eget. Fusce gravida lectus ac mauris egestas lobortis. In eu libero nisl. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur commodo malesuada convallis. Integer dapibus tempus tincidunt. Suspendisse nisl risus, venenatis rutrum nunc nec, sagittis laoreet odio.</p>
+        <p>Cras ultricies mauris eu eros ultricies consequat. Fusce sit amet risus velit. Sed commodo tellus nec neque tristique tempor. Phasellus id iaculis purus, id mattis urna. Vestibulum pretium euismod ante, id mollis neque molestie nec. Nunc pharetra, orci at laoreet facilisis, dolor quam blandit nunc, in volutpat nisi nunc ut augue. Nunc at tortor ligula.</p>
+        <p>Cras fermentum dolor vehicula lacinia egestas. Nunc venenatis augue quis est faucibus feugiat. Nullam at eleifend nibh. Vestibulum sit amet aliquam enim, vitae malesuada purus. Quisque ultricies ullamcorper pharetra. Nunc fringilla, magna nec varius accumsan, nunc augue sollicitudin enim, et feugiat dolor justo eget orci. Mauris ut tempor dui. Cras sollicitudin augue sit amet erat ultrices efficitur ac a elit. Sed hendrerit ante sit amet nibh vehicula faucibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum pulvinar, ex in consectetur ornare, risus arcu mattis urna, et rutrum sem ante eget lectus. Donec tristique scelerisque leo, euismod iaculis lacus pulvinar id. Sed erat nibh, rutrum nec nisi non, gravida congue lacus.</p>
+      </section>
     </main>
-      <table border="1px">
-        <thead>
-          <tr>
-            <th width=200>Type</th>
-            <th>Ingredients</th>
-            <th>Price</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Pan pizza</td>
-            <td>Olives</td>
-            <td>$70</td>
-          </tr>
-        </tbody>
-      </table>
-    <footer>This is a footer!</footer>
+    <footer>
+      <section class="footer-header-content">
+        This is a footer!
+      </section>
+    </footer>
   </body>
 </html>
